# rustyed

./: .gitignore  .vimspector.json  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs  launch.txt  rustyed.conf  rustyed.conf.ini  test.txt
.github/workflows/: release.yml  rust.yml
assets/: rustyed.desktop  rustyed_icon.graphite  rustyed_icon16.rgba  rustyed_icon32.rgba  rustyed_icon64.rgba
src/: buffer.rs  config.rs  core.rs  editor.rs  main.rs  render.rs
