[package]
name = "rustyed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
copypasta = "0.8.2"
undo = "0.49.0"
rfd = { version = "*", default-features = false, features = ['xdg-portal'] }
